# take-your-time

./: .gitignore  README.md
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  test_contact_model.py
backend/app/: startup.py  version.py
backend/app/auth/: __init__.py  blacklist.py  dependencies.py  jwt.py  password.py
backend/app/config/: cors.py  database.py  schema_versions.py  settings.py
backend/app/models/: admin_user_cart.py  admin_user_wishlist.py  cart.py  contact.py  product.py  token_blacklist.py  user.py  wishlist.py
backend/app/routers/: admin_migration.py  admin_object_sort_filter.py  admin_users.py  auth.py  cart.py  contact.py  products.py  wishlist.py
backend/app/schema_version_upgrade/: __init__.py  upgrade_system.py
backend/app/schemas/: admin_user_cart.py  admin_user_wishlist.py  auth.py  cart.py  contact.py  product.py  user.py  wishlist.py
backend/app/services/: email.py
backend/app/utils/: admin_search.py  admin_user_cart_search.py  admin_user_wishlist_search.py  database_migration.py
backend/tests/: TEST_README.md  __init__.py  conftest.py  test_products_autogeneration.py  test_products_endpoints.py  test_products_unit.py
backend/tests/admin/: test_admin_cart.py  test_admin_products.py  test_admin_users.py  test_admin_wishlist.py
backend/tests/admin_search/: __init__.py  test_admin_cart_search.py  test_admin_products_search.py  test_admin_search_utility.py  test_admin_users_search.py  test_admin_wishlist_search.py
backend/tests/auth/: test_authentication.py
backend/tests/contact/: __init__.py  (+3 more)
(+213 files in other folders)
