[project]
name = "backend"
version = "1.0.0"
description = "Take Your Time - Booking reservation system API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pymongo==4.14.1",
    "pytest==8.4.1",
    "python-dotenv==1.1.1",
    "uvicorn==0.35.0",
    "email-validator==2.1.1",
    "toml==0.10.2",
]
